--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -80,7 +80,7 @@
      .copy {
      /*text-align:right; */
      font-family: "Times New Roman";
-     position:fixed; right:120px; bottom:25px;
+     /* position:fixed; right:120px; bottom:25px; */
      }
      
 
