--- a/views/index.erb
+++ b/views/index.erb
@@ -37,7 +37,7 @@ _gaq.push(['_trackPageview']);
           
           <div id="header">
                <h1 class="logo"><img src="/img/content/pixelwerk-logo.png" alt="Pixelwerk" /></h1>
-               <p class="intro"><strong>PIXELWERK</strong> er et selskap som leverer innovative og interaktive løsninger som forsterker forbrukers opplevelse og engasjement på alle digitale plattformer.</p>
+               <p class="intro"><strong>PIXELWERK</strong> er et selskap som leverer innovative og interaktive løsninger som forsterker kundens opplevelse og engasjement på alle digitale plattformer.</p>
           </div>
 
           
